name:                hello
version:             0.1.0.0
synopsis:            Dummy Project
description:         no description
license:             BSD3
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git://github.com/hvr/sandbox.git

executable hello
  main-is:             hello.hs 
  build-depends:       base >=4 && <4.8, zlib == 0.5.*, QuickCheck == 2.6.*
  default-language:    Haskell98
